src/main/webapp/content/scss/quiz.scss
/* ... */
.edit-dnd-question,
.edit-sa-question,
.dnd-question,
.sa-question {
    .background-area {
        position: relative;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;

        .click-layer {
            position: absolute;
            top: 0;
            left: 0;
            bottom: 0;
            right: 0;
            z-index: 1;

            .drop-location {
                position: absolute;
                display: flex;
                flex-direction: row;
                align-items: flex-start;
                justify-content: flex-end;
            }
        }

        img {
            width: 100%;
        }
    }

    .instructions {
        display: flex;
        justify-content: space-between;
        margin: 10px 0;
        font-weight: 500;
    }

    .drag-items {
        margin: 6px 0;
        width: 100%;
        min-height: 180px;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-evenly;
    }

    .ellipsis {
        text-overflow: ellipsis;
        /* Required for text-overflow to do anything */
        white-space: nowrap;
        overflow: hidden;
    }
}

.dnd-question {
    overflow: auto;

    .drag-and-drop-area {
        display: flex;
        justify-content: center;

        @media (max-width: 900px) {
            display: block;
        }

        .background-area {
            .click-layer {
                .drop-location {
                    .drag-item {
                        background: transparent;
                        border: none;
                        position: relative;
                        min-width: 160px;
                        max-width: 360px;

                        .drag-item-text {
                            @media (max-width: 812px) {
                                padding: 0;
                            }
                        }

                        img {
                            max-height: 100%;
                            max-width: 100%;
                            height: auto;
                            width: auto !important;
                            margin: auto;
                            position: absolute;
                            transform: translate(-50%, -50%);
                            top: 50%;
                            left: 50%;
                        }

                        div {
                            @media (max-width: 812px) {
                                padding: 0 !important;
                            }

                            span {
                                @media (max-width: 480px) {
                                    font-size: 12px;
                                }
                            }
                        }
                    }
                }
            }
        }

        .drag-and-drop-items {
            @media (orientation: landscape) and (min-width: 900px) {
                margin: -5px 0 0 20px;
            }

            .instructions {
                @media (orientation: landscape) and (min-width: 900px) {
                    margin: 0 0 10px 0;
                }
            }

            > div {
                width: 100%;

                @media (orientation: landscape) and (min-width: 900px) {
                    width: 200px;
                }
            }

            .drag-items {
                width: 100%;

                @media (orientation: landscape) and (min-width: 900px) {
                    margin: 0;
                    width: 200px;
                }
            }
        }
    }
}

.edit-dnd-question {
    .drag-items {
        .drag-item {
            height: 160px;
            img {
                max-height: 100%;
                max-width: 100%;
                height: auto;
                width: auto !important;
                margin: auto;
                position: absolute;
                transform: translate(-50%, -50%);
                top: 50%;
                left: 50%;
            }
        }
    }
}
/* ... */

